--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "lucide-react": "^0.468.0",
         "next-themes": "^0.4.4",
         "preline": "^2.6.0",
+        "react-number-format": "^5.4.2",
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7"
