--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-number-format": "^5.4.2",
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "use-debounce": "^10.0.4"
     }
 }
