--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@formkit/auto-animate": "^0.8.2",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-slot": "^1.1.0",
