--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "@number-flow/react": "^0.4.4",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-popover": "^1.1.4",
         "@radix-ui/react-slot": "^1.1.0",
         "@tanstack/react-table": "^8.20.5",
         "class-variance-authority": "^0.7.1",
