--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "erag/laravel-pwa": "^1.0",
         "inertiajs/inertia-laravel": "2.x-dev",
         "lacodix/laravel-model-filter": "^3.2",
         "laravel/framework": "^11.31",
