--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
     "background_color": "#6777ef",
     "display": "fullscreen",
     "description": "A software for managing businesses such as shops, supermarkets, and more.",
-    "theme_color": "#6777ef",
+    "theme_color": "#111827",
     "start_url": "/",
     "icons": [
         {
