--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "dependencies": {
         "@formkit/auto-animate": "^0.8.2",
         "@number-flow/react": "^0.4.4",
-        "@radix-ui/react-dialog": "^1.1.2",
+        "@radix-ui/react-dialog": "^1.1.4",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-popover": "^1.1.4",
@@ -47,6 +47,7 @@
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
-        "use-debounce": "^10.0.4"
+        "use-debounce": "^10.0.4",
+        "vaul": "^1.1.2"
     }
 }
