--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
         "@types/dropzone": "^5.7.9",
         "@types/lodash": "^4.17.13",
         "@types/node": "^18.13.0",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.10",
+        "@types/react": "19.0.2",
+        "@types/react-dom": "19.0.2",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^5.0"
