--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,9 @@
     "name": "Mauzodata Sales Innovations",
     "short_name": "Mauzodata",
     "background_color": "#111827",
-    "display": "fullscreen",
+    "display": "standalone",
+    "orientation": "any",
+    "status_bar": "default",
     "description": "A software for managing businesses such as shops, supermarkets, and more.",
     "theme_color": "#0e7490",
     "start_url": "/",
