--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "inertiajs/inertia-laravel": "2.x-dev",
         "lacodix/laravel-model-filter": "^3.2",
         "laravel/framework": "^11.31",
+        "laravel/pulse": "^1.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "predis/predis": "^2.0",
