--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "react": "19.0.0",
-        "react-dom": "19.0.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^5.0"
@@ -44,6 +44,7 @@
         "next-themes": "^0.4.4",
         "preline": "^2.6.0",
         "react-number-format": "^5.4.2",
+        "recharts": "^2.15.0",
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
