--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "erag/laravel-pwa": "^1.0",
         "flowframe/laravel-trend": "^0.3.0",
         "inertiajs/inertia-laravel": "2.x-dev",
