--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "lucide-react": "^0.468.0",
         "next-themes": "^0.4.4",
         "preline": "^2.6.0",
+        "react-day-picker": "^9.0.4",
         "react-number-format": "^5.4.2",
         "recharts": "^2.15.0",
         "sonner": "^1.7.1",
