--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Mauzodata
 APP_ENV=local
-APP_KEY=base64:cHShVT86jgrKxgE+e0fIESkUrNRNGGzim+IhgnZEa3E=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
