--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
         "react-dom": "^18.3.1",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
-        "vite": "^5.0"
+        "vite": "^6.2.3"
     },
     "dependencies": {
         "@formkit/auto-animate": "^0.8.2",
         "@number-flow/react": "^0.4.4",
+        "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.4",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-label": "^2.1.1",
